refactor(service/controller) Refactored IngredientRequestController an IngredientRequestService to reflect new JWT auth implementation in system